impl `get_content` api
